# wasm-plugins

./: .gitignore  README.md  SECURITY.md
.github/workflows/: deploy.yml
plugins/: Cargo.toml
plugins/markdown/: Cargo.toml
plugins/markdown/src/: lib.rs
plugins/tag-manager/: Cargo.toml
plugins/tag-manager/src/: lib.rs
plugins/word-counter/: Cargo.toml
plugins/word-counter/src/: lib.rs
scripts/: build-plugins.sh
site/: astro.config.mjs  package-lock.json  package.json  tailwind.config.mjs
site/public/: plugin-registry.json
site/public/plugins/markdown/: index.js  manifest.json  markdown_plugin.js  markdown_plugin_bg.wasm
site/public/plugins/tag-manager/: index.js  manifest.json  tag_manager_plugin.js  tag_manager_plugin_bg.wasm
site/public/plugins/word-counter/: index.js  manifest.json  word_counter_plugin.js  word_counter_plugin_bg.wasm
site/src/components/: NoteEditor.tsx  NotesApp.tsx  NotesList.tsx  PluginManager.tsx  PluginStore.tsx
site/src/components/ui/: command.tsx
site/src/lib/: extension-host.worker.js  plugin-loader.js  plugin-loader.ts  secure-plugin-loader.js  utils.ts
site/src/pages/: index.astro
site/src/styles/: global.css  globals.css
wasm-plugin-sdk/: Cargo.toml
wasm-plugin-sdk/src/: lib.rs  prelude.rs
wasm-plugin-sdk/src/api/: mod.rs  text.rs  ui.rs
