[package]
name = "markdown-plugin"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = { workspace = true }
pulldown-cmark = "0.9"
wasm-plugin-sdk = { path = "../../wasm-plugin-sdk" }
serde = { workspace = true }
serde_json = "1.0"

[profile.release]
opt-level = "z"
lto = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
