[package]
name = "word-counter-plugin"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = { workspace = true }
serde = { workspace = true }
serde-wasm-bindgen = { workspace = true }
wasm-plugin-sdk = { path = "../../wasm-plugin-sdk" }
serde_json = "1.0"

[profile.release]
opt-level = "z"
lto = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
